# aws-files-to-ds-integration

./: Design_Specification.md  File_Locations.txt  Integrating Data via Database Users-Open SQL Schemas - SAP Help Portal.url  README.md  aws-files-to-ds.bat  aws-files-to-ds.py  control_table_upsert.sql  ds_config.ini  pyproject.toml  requirements.txt  uni_logger.py
